package zxc.rpc.zxcrpcremote.reflection.proxy;

public interface Subject {
    void request();
}
